<resources>
    <string name="app_name">MuonDetector</string>
    <string name="preview_parameters">Preview parameters</string>
    <string name="preview_fps_range">FPS range</string>
    <string name="fps">FPS (static)</string>
    <string name="start_service_button">Start service</string>
    <string name="picture_size">Picture size</string>
    <string name="edit_in_sample_size">Choose an int in [1, 4]</string>
    <string name="in_sample_size">Sample size</string>
    <string name="calibration_duration">Calibration phase length</string>
    <string name="edit_calibration_duration">Choose a length in sec</string>
    <string name="other_settings">Other settings</string>
    <string name="crop_factor">Crop factor</string>
    <string name="edit_crop_factor">% of image to process</string>
    <string name="num_of_sd">Standard deviations</string>
    <string name="edit_num_of_sd">How many? int in [1, 10]</string>
    <string name="stop_capture">Stop capture</string>
    <string name="fps_mode_dynamic">"FPS mode is now dynamic"</string>
    <string name="fps_mode_static">"FPS mode is now static"</string>
    <string name="cropPictureContent">"Cropped picture"</string>
    <string name="crop_rect_button_off">"Scale mode"</string>
    <string name="crop_rect_button_on">"Crop mode"</string>
    <string name="saveCroppedPic">"Save cropped pic"</string>
    <string name="discardPic">"Discard this pic"</string>
    <string name="popup_text">"Select a tag for the candidate pic"</string>
    <string name="undetermined">"Undetermined"</string>
    <string name="track">"Track"</string>
    <string name="worm">"Worm"</string>
    <string name="spot">"Spot"</string>
    <string name="hot_spot">"Hot spot"</string>
    <string name="save_tag">"Save the tag"</string>


</resources>