<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView android:id="@+id/network_parameters"
        style="?android:attr/listSeparatorTextViewStyle"
        android:text="@string/preview_parameters"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <TextView android:id="@+id/fps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fps"
            />
        <Spinner
            android:id="@+id/fps_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <TextView android:id="@+id/preview_fps_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview_fps_range"
            />
        <Spinner
            android:id="@+id/preview_fps_range_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <TextView android:id="@+id/fps_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fps_mode_dynamic"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <TextView android:id="@+id/picture_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture_size"
            />
        <Spinner
            android:id="@+id/picture_size_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <TextView android:id="@+id/in_sample_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_sample_size"
            />
        <EditText android:id="@+id/edit_in_sample_size"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_in_sample_size"
            />
    </LinearLayout>

    <TextView android:id="@+id/other_settings"
        style="?android:attr/listSeparatorTextViewStyle"
        android:text="@string/other_settings"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <TextView android:id="@+id/calibration_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibration_duration"
            />
        <EditText android:id="@+id/edit_calibration_duration"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_calibration_duration"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <TextView android:id="@+id/crop_factor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_factor"
            />
        <EditText android:id="@+id/edit_crop_factor"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_crop_factor"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <TextView android:id="@+id/num_of_sd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_of_sd"
            />
        <EditText android:id="@+id/edit_num_of_sd"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_num_of_sd"
            />
    </LinearLayout>

    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/start_service_button"
        android:onClick="startService" />

</LinearLayout>